W01/styles/styles.css
/* Global */
* {
  padding: 0;
  margin: 0;
}

:root {
  --serif-fonts: "Roboto Slab", serif;
  --sans-sefir-fonts: "Roboto", sans-serif;
  --inconsolata-fonts: "Inconsolata", monospace;
  --main-font-color: #333333;
  --background-color: #3377aa;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Header */
.header__container {
  background-color: var(--background-color);
  height: 170px;
  width: 500px;
  display: grid;
  grid-template-columns: 1fr 3fr;
  border-radius: 10px;
  margin: 0 auto;
  box-shadow: 0px 0px 40px black;
}

img {
  height: 150px;
  display: flex;
  align-self: center;
  justify-self: center;
  margin-left: 40px;
  box-shadow: 0px 0px 15px black;
}

.name {
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
  font-family: var(--sans-sefir-fonts);
}

/* Main */
.main__container {
  width: 500px;
  margin: 0 auto;
}

h2 {
  color: var(--main-font-color);
  font-weight: bold;
  text-shadow: 0px 0px 1px black;
  margin-top: 20px;
  margin-bottom: 5px;
  font-family: var(--inconsolata-fonts);
  text-align: left;
}

.inco {
  font-family: var(--inconsolata-fonts);
}

ul {
  margin-top: 10px;
  margin-bottom: 15px;
}

li {
  font-family: var(--inconsolata-fonts);
  font-weight: 600;
  color: var(--main-font-color);
  margin-left: 25px;
  line-height: 1.4em;
  letter-spacing: 0.1em;
}

em {
  color: var(--main-font-color);
  font-family: var(--sans-sefir-fonts);
  font-size: 15px;
}

/* Footer */
.footer__container {
  background-color: var(--background-color);
  height: 85px;
  width: 500px;
  margin: 0 auto;
  border-radius: 10px;
  display: grid;
  grid-template-rows: 1fr 1fr;
  margin-top: 30px;
  box-shadow: 0px 0px 40px black;
}

.footer--top,
.footer--bottom {
  margin: auto;
}

.footer--top {
  margin-top: 20px;
  color: white;
  font-family: var(--sans-sefir-fonts);
  font-weight: 300;
}

.footer--bottom {
  margin-bottom: 20px;
  color: yellow;
  font-family: var(--inconsolata-fonts);
  font-weight: 300;
}

